web/book/tests/snapshots/snapshot__tests__prql__internals__functional-lang-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter age > 50\nsort name\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name

