web/book/tests/snapshots/snapshot__tests__prql__internals__functional-lang-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees | filter age > 50 | sort name\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name

