web/book/tests/snapshots/snapshot__tests__prql__internals__functional-lang-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "filter age > 50 (from employees) | sort name\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name

