web/book/tests/snapshots/snapshot__tests__prql__internals__functional-lang-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "sort name (filter age > 50 (from employees))\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name

