web/book/tests/snapshots/snapshot__tests__prql__internals__name-resolving-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive [first_name, dept_id]\njoin d=departments [==dept_id]\nselect [first_name, d.title]\n"
---
SELECT
  employees.first_name,
  d.title
FROM
  employees
  JOIN departments AS d ON employees.dept_id = d.dept_id

